--- a/nsfpalizer/pom.xml
+++ b/nsfpalizer/pom.xml
@@ -7,9 +7,7 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>com.charite.nsfp</groupId>
   <artifactId>nsfpalizer</artifactId>
-  <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>nsfpalizer</name>
@@ -26,6 +24,31 @@
       <version>4.10</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.charite.nsfp</groupId>
+      <artifactId>nsfp-commons</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.6</version>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.16</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -33,10 +56,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.4</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
-                    <mainClass>com.charite.nsfp.App</mainClass>
+                    <mainClass>com.charite.nsfp.NSFPAlizer</mainClass>
                 </configuration>
             </plugin>
 
@@ -48,13 +72,31 @@
                     <archive>
                         <index>true</index>
                         <manifest>
-                            <classpathPrefix>lib/</classpathPrefix>
+                            <classpathPrefix>./lib/</classpathPrefix>
                             <addClasspath>true</addClasspath>
-                            <mainClass>com.charite.nsfp.App</mainClass>
+                            <mainClass>com.charite.nsfp.NSFPAlizer</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
             </plugin>
+
+            <!--plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-shade-plugin</artifactId>
+              <version>1.7.1</version>
+              <executions>
+                <execution>
+                  <phase>package</phase>
+                  <goals>
+                    <goal>shade</goal>
+                  </goals>
+                  <configuration>
+                    <shadedArtifactAttached>true</shadedArtifactAttached>
+                    <shadedClassifierName>all</shadedClassifierName>
+                  </configuration>
+                </execution>
+              </executions>
+            </plugin-->
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
