--- a/nsfp-commons/pom.xml
+++ b/nsfp-commons/pom.xml
@@ -11,6 +11,7 @@
   <artifactId>nsfp-commons</artifactId>
   <name>nsfp-commons</name>
   <url>http://maven.apache.org</url>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -24,6 +25,12 @@
       <artifactId>hsqldb</artifactId>
       <version>2.2.8</version>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
     </dependency>
 
     <dependency>
