Implemented thr filters and the code to run over the filters

--- a/nsfpalizer/nsfpalizer.conf
+++ b/nsfpalizer/nsfpalizer.conf
@@ -1,4 +1,5 @@
-database.nsfp.url=http://dbnsfp.houstonbioinformatics.org/dbNSFPzip/dbNSFP2.0b3.zip
+#database.nsfp.url=http://dbnsfp.houstonbioinformatics.org/dbNSFPzip/dbNSFP2.0b3.zip
+database.nsfp.url=file:/Users/leonardobispodeoliveira/Downloads/dbNSFP2.0b3.zip
 database.esp.url=http://evs.gs.washington.edu/evs_bulk_data/ESP6500.snps.txt.tar.gz
 download.cachelocation=/tmp
 database.psqllocation=/usr/bin/psql
